<package>
  <name>sr_ronex_ethercat_drivers</name>
  <version>1.0.0</version>
  <description>Package containing the driver for the RoNeX boards, and the CodDecod modules to map the inputs and outputs from every board to ROS topics and (optionally) to the HardwareInterface class.</description>
  <maintainer email="">Maintained by Toni Oliver (software@shadowrobot.com)</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_ronex_ethercat_drivers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Toni Oliver (software@shadowrobot.com)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_msgs</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_common_msgs</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>eml</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sr_ronex_external_protocol</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_msgs</run_depend>
  <run_depend>ethercat_hardware</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_common_msgs</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>eml</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_msgs</test_depend> -->
  <!-- <test_depend>ethercat_hardware</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sr_common_msgs</test_depend> -->
  <!-- <test_depend>pr2_hardware_interface</test_depend> -->
  <!-- <test_depend>eml</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>realtime_tools</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_updater</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>sr_ronex_external_protocol</test_depend> -->
  <!-- <test_depend>sr_ronex_hardware_interface</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -lsr_ronex_ethercat_drivers -Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
    <ethercat_hardware plugin="${prefix}/ethercat_device_plugin.xml"/>
    <sr_ronex_ethercat_drivers plugin="${prefix}/ethercat_device_plugin.xml"/>
</export>

</package>