<package>
  <name>sr_ronex_hardware_interface</name>
  <version>1.0.0</version>
  <description>This package contains the definition of the CustomHW to be
    added to the pr2_hardware_interface CustomHWMap for the
    RoNeX.</description>
  <maintainer email="">Ugo Cupcic software@shadowrobot.com</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_ronex_hardware_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ugo Cupcic software@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>sr_ronex_external_protocol</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>sr_ronex_external_protocol</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>pr2_hardware_interface</test_depend> -->
  <!-- <test_depend>sr_ronex_external_protocol</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>