<package>
  <name>sr_ronex_launch</name>
  <version>1.0.0</version>
  <description>Contains the main launch files for the RoNeX system.</description>
  <maintainer email="">Toni Oliver (software@shadowrobot.com)</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_ronex_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Toni Oliver (software@shadowrobot.com)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_etherCAT</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_etherCAT</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_etherCAT</test_depend> -->

</package>