<package>
  <name>sr_ronex_mechanism_model</name>
  <version>1.0.0</version>
  <description>Contains the transmissions that can be used with the RoNeX driver. Using those transmissions makes it possible for the user to remap from the RoNeX to a joint based robot.</description>
  <maintainer email="software@shadowrobot.com">Ugo Cupcic </maintainer>

  <license>Proprietary</license>

  <url type="website">http://ros.org/wiki/sr_ronex_mechanism_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="software@shadowrobot.com">Ugo Cupcic </author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sr_ronex_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sr_ronex_hardware_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sr_ronex_hardware_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->
  <test_depend>gtest</test_depend>

<export>
    <cpp lflags="-L${prefix}/lib -lronex_mechanism_model -Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
    <pr2_mechanism_model plugin="${prefix}/transmission_plugin.xml"/>
</export>

</package>
